[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/arrow.png" type="Texture" id=2]
[ext_resource path="res://assets/spacebar.png" type="Texture" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="StartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.5
margin_top = 76.0
margin_right = 20.5
margin_bottom = 96.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -7.0
margin_right = 30.0
margin_bottom = 7.0
text = "YOU WIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthBar" type="ProgressBar" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 35.4583
margin_top = 35.0662
margin_right = 174.459
margin_bottom = 49.0662
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightArrow" type="Sprite" parent="."]
position = Vector2( 192, 458 )
texture = ExtResource( 2 )

[node name="LeftArrow" type="Sprite" parent="."]
position = Vector2( 31.4583, 457.766 )
rotation = 3.14159
texture = ExtResource( 2 )

[node name="SpaceBar" type="Sprite" parent="."]
position = Vector2( 112, 457 )
texture = ExtResource( 3 )
[connection signal="pressed" from="StartButton" to="." method="_on_Button_pressed"]
